--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body
 {
   background: rgb(255,65,0);
   background: radial-gradient(circle, rgba(255,65,0,1) 0%, rgba(0,0,0,1) 100%);
+  z-index: -1;
   
 }
 
